style.css
:root {
    --primary-content: #000000;
    --secondary-content: #bf05a3;
    --shadow-light: 1px 1px 4px rgba(0, 0, 0, 0.2);
    --shadow-dark: 1px 1px 4px rgba(0, 0, 0, 0.7);
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: var(--primary-content);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

a {
    text-decoration: none;
    cursor: pointer;
}

li {
    list-style: none;
}

h2 {
    text-align: center;
    /* padding-top: 4rem;
    padding-bottom: 2rem; */
    font-size: 2.5rem;
    font-weight: 800;
    /* text-shadow: var(--shadow-light); */
}

p {
    text-wrap: pretty;
}

.primary-nav {
    position: relative;
    left: 0;
    top: 0;
    z-index: 100;
    padding-inline: 2rem;
    padding-block: 1rem;
    width: 100%;
    box-shadow: var(--shadow-light);
}

.nav-list,
.footer-list {
    display: flex;
    justify-content: flex-end;
    gap: 2rem;
    text-transform: uppercase;
    letter-spacing: 1.25px;
}

.nav-link:first-child {
    margin-right: auto;
}

.nav-item:hover,
.footer-item:hover,
.project span a:hover,
.contact-section a:hover,
.project-container a:hover,
.to-top-btn:hover,
.resume-section i:hover,
.contact-form input:last-child:hover,
.resume-div-1 a:hover,
.project-links i:hover {
    color: var(--secondary-content);
}

.primary-footer {
    display: flex;
    justify-content: flex-start;
    width: 100%;
    position: absolute;
    bottom: 0;
    padding-inline: 1rem;
    padding-block: .5rem;
    box-shadow: var(--shadow-light);
}

.footer-list {
    font-size: .75rem;
}

main {
    position: relative;
}

.to-top-btn {
    position: fixed;
    bottom: 20px;
    right: 20px;
    padding-inline: 1rem;
    padding-block: .5rem;
    box-shadow: var(--shadow-light);
    border-radius: 5px;
}

.to-top-btn:hover {
    outline-offset: 4px;
}

section {
    width: 100%;
    min-height: 100vh;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

.about-section {
    gap: 0;
    justify-content: center;
}

.about-section p {
    width: 45ch;
    color: #393939;
    text-wrap: balance;
}

.about-section h3 {
    text-align: center;
    color: var(--secondary-content);
    font-size: 1.3rem;
    padding-bottom: 2rem;
    font-weight: 400;
}

/* .project-card {
    box-shadow: var(--shadow-light);
    border-radius: 15px;
    padding: 1rem;
} */

.profile-photo {
    border-radius: 100px;
    width: 10rem;
    height: 10rem;
    outline: 2px solid var(--secondary-content);
    outline-offset: 6px;
    margin-top: 4rem;
    margin-bottom: 2rem;
    pointer-events: none;
}

/* .project-links {
    display: flex;
    justify-content: center;
    gap: 2rem;
} */

.about-p {
    text-align: center;
    line-height: 1.5rem;
}

.about-p > span {
    font-weight: 600;
}

.resume-section i {
    font-size: 2rem;
    color: #919191;
}

.resume-div {
    box-shadow: var(--shadow-light);
    border-radius: 25px;
    width: 75%;
    padding: 6rem;
    display: flex;
    flex-direction: column;
    gap: 1.75rem;
    line-height: 1.5rem;
}

.resume-div h3 {
    text-align: center;
    font-weight: 600;
    color: #7d7d7d;
    text-transform: uppercase;
    font-size: 1.1rem;
    padding-bottom: .75rem;
}

.resume-div-1 {
    text-align: center;
    padding-bottom: 1rem;
}

.resume-div-1 h2 {
    padding-bottom: 1rem;
}

.resume-div-3 ul,
.project div ul,
.overlay ul {
    display: flex;
    flex-wrap: wrap;
    column-gap: .5rem;
    row-gap: .25rem;
    justify-content: center;
}

.resume-div-3 li,
.project div li,
.overlay li {
    box-shadow: var(--shadow-light);
    border-radius: 50px;
    width: fit-content;
    padding-inline: 1rem;
}

.overlay li {
    /* outline: 1px solid var(--secondary-content); */
    padding-block: .05rem;
    box-shadow: var(--shadow-dark);
    background-color: #9191914e;
}


.project div li {
    font-weight: 400;
}

.project:last-child,
.experience:last-child {
    padding-top: 1rem;
}

.education:last-child {
    padding-top: .75rem;
}

/* .project div:first-child {
    font-weight: 700;
} */

/* .project div:nth-child(2), */
.education div {
    font-size: .75rem;
    font-style: italic;
    padding-inline: 2rem;
    padding-block: .25rem;
    line-height: 1.25rem;
}

.project ul,
.experience ul {
    padding-left: 1.5rem;
}

.project > ul > li {
    list-style: circle;
}

.experience li {
    list-style: circle;
}

.experience p,
.education p {
    display: flex;
    justify-content: space-between;
}

.experience span:first-child,
.education span:first-child {
    font-weight: 700;
}

.experience span:last-child,
.education span:last-child {
    font-size: .75rem;
    font-style: italic;
}

.project span a {
    color: #919191;
    font-weight: 400;
}

.contact-section a {
    /* padding-top: 2rem; */
    /* font-size: 1.5rem;
    font-weight: 600;
    color: #919191;
    letter-spacing: .25rem; */
}

.contact-section .contact-form {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    box-shadow: var(--shadow-light);
    padding: 2rem;
    border-radius: 15px;
    width: 20rem;
}

.contact-form input,
.contact-form textarea {
    margin-top: .25rem;
    margin-bottom: 1rem;
    border-radius: 5px;
}

.contact-form input:last-child {
    border: none;
    background-color: transparent;
    cursor: pointer;
    box-shadow: var(--shadow-light);
    padding-block: .25rem;
}

.project-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.project-container {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
    gap: 2rem;
}

.project-card {
    /* width: 30rem; */
    height: 15rem;
    background-position: center;
    background-size: cover;
    border-radius: 15px;
    box-shadow: var(--shadow-light);
    position: relative;
}

.project-card .overlay {
    position: absolute;
    width:100%;
    height: 15rem;
    border-radius: 15px;
    background-color: #00000097;
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 2rem;
    gap: 1rem;
    backdrop-filter: blur(5px);
} 

.project-card .overlay * {
    color: #ffffff;
}

.project-card:hover .overlay,
.project-card:focus .overlay,
.project-card:active .overlay {
    display: flex;
}

.overlay ul {
    padding-inline: 3rem;
}

.project-links {
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 3rem;
    padding-top: 1rem;
}

.project-links i {
    font-size: 1.25rem;
}

.overlay h3 {
    font-size: 1.5rem;
}

@media screen and (max-width: 700px) {
    .resume-div {
        width: 100%;
        padding: 1.5rem;
    }

    .resume-div h2 {
        font-size: 1.75rem;
    }

    .resume-div h3 {
        font-size: 1rem;
    }

    .resume-div-3 li,
    .project div li {
        font-size: .75rem;
        padding-inline: .25rem;
    }

    .primary-footer {
        display: none;
    }

    .primary-nav li {
        font-size: .75rem;
        margin: 0;
    }

    .primary-nav ul {
        justify-content: center;
        gap: .5rem;
    }

    .about-section p {
        width: 90%;
    }

    .about-section img {
        margin-top: -5rem;
    }

    section {
        margin-bottom: 3rem;
    }

    .overlay ul {
        padding: 0rem;
    }

    .overlay i {
        font-size: 2rem;
    }

    .project-container {
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    }
}

